exception handling added

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -68,7 +68,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Step 13: Define a function called get_requirements which helps in fetching the requirements and then call this function\n",
+    "# in the install_packages instead of adding the package names one by one. \n",
+    "# Step 14: Create the exception.py file and logging file. "
+   ]
   }
  ],
  "metadata": {
