--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -465,7 +465,15 @@
    "outputs": [],
    "source": [
     "# Create a file outside called - \"deployment steps.txt\". In this we will write all the steps for deployment.\n",
-    "# Create a folder - .git \n"
+    "# Create a folder - .github.\n",
+    "# In that create another folder called workflows.\n",
+    "# In workflows, create main.yml. This is not a yaml file. This file describes roadmap of deployment. \n",
+    "# Now go into sensor > cloud storage > s3_syncer.py file\n",
+    "# Now go into constant>s3 bucket file and add s3 related constanst\n",
+    "# Update the env_variable file in constans with aws related constants\n",
+    "# Now some changes need to be made in training pipleline in pipeline.\n",
+    "# Create a file called Dockerfile\n",
+    "# Create another file called .dockerignore. This is similar to gitignore."
    ]
   }
  ],
