Code with deployment updates

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,8 +473,29 @@
     "# Update the env_variable file in constans with aws related constants\n",
     "# Now some changes need to be made in training pipleline in pipeline.\n",
     "# Create a file called Dockerfile\n",
-    "# Create another file called .dockerignore. This is similar to gitignore."
+    "# Create another file called .dockerignore. This is similar to gitignore.\n",
+    "# update requirements.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AWS\n",
+    "# 1. Search IAM -> User > create user > sensor_g > policy > tick those policies > tag: mysensor > create user.\n",
+    "# 2. Click on user > security credentials > create access key > other > next > you will get access keys > download and save in\n",
+    "# system.\n",
+    "# 3. S3 bucket search> select region >  create bucket > mysensorg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
